--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.anti_captcha</groupId>
+    <groupId>com.github.dore51</groupId>
     <artifactId>anticaptcha-java</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>maven-project</version>
+
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
